# p2p-app

./: Cargo.toml
src/: main.rs
src/actors/: mod.rs  room_actor.rs  session_actor.rs
src/errors/: mod.rs
src/models/: network.rs  socket.rs
src/nodes/: connection.rs  mod.rs  node.rs
