[package]
name = "p2p-app"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "io-std"] }
clap = { version = "4.5.6", features = ["derive"] }
futures = "0.3.31"
anyhow = "1.0.86"
libp2p = { version = "0.55", features = [ "tokio", "dns", "kad", "gossipsub", "mdns", "macros", "noise", "quic", "tcp", "yamux", "rsa", "websocket","identify", "macros", "noise", "ping", "rendezvous"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.41"
async-std = "1.13.0"
log = "0.4.26"
env_logger = "0.11.6"
